# gigs_bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.MD  deploy.sh  docker-compose.yml  fly.toml  main.py  pyproject.toml  pyrightconfig.json  run_daily_digest.py  run_reminders.py  telegram_calendar_bot_rfc.md  wsgi.py
app/api/: app.py  deps.py
app/api/routers/: auth.py  events.py
app/bot/: keyboards.py  polling.py  scheduler.py  setup.py  states.py
app/bot/handlers/: button_mode.py  common.py  text_mode.py
app/bot/middlewares/: db_session.py  user_sync.py
app/cache/: redis_client.py
app/core/: config.py  security.py
app/db/: base.py  models.py
app/services/: ai_agent.py  auth_service.py  calendar_service.py  gemini_agent.py  reminder_service.py
tests/: conftest.py  test_ai_agent.py  test_calendar_service.py  test_config.py  test_daily_digest.py  test_keyboards.py  test_security.py  test_states.py  test_user_sync_middleware.py
